--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+sudo: false
 language: ruby
 rvm:
   - 2.3.0
-before_script:
-  - psql -c 'create database handyshop;' -U postgres
 cache: bundler
+before_install:
+  - gem update --system
+before_script:
+  - bash init-user-db.sh
