--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ before_install:
   - gem update --system
 before_script:
   - bash init-user-db.sh
+script:
+  - bundle exec rake db:test:prepare
+  - bundle exec rake
