--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,11 @@
 .idea/
 *.iml
 
+# Ignore vscode configuration folder
+.vscode/
+
 # Ignore application configuration
 /config/application.yml
+
+# Ignore coverage folder
+coverage/
